# Medical-image-ML-algorithm

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
archive/: README.md
docs/: SHOWCASE.md
docs/assets/: README.md
keras_tuning_results/mlp_assgn2/: oracle.json
keras_tuning_results/mlp_assgn2/trial_0000/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0001/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0002/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0003/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0004/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0005/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0006/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0007/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0008/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0009/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0010/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0011/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0012/: checkpoint.weights.h5  trial.json
keras_tuning_results/mlp_assgn2/trial_0013/: checkpoint.weights.h5  trial.json
scripts/: run_all.sh  setup_venv.sh
src/medical_image_ml/: __init__.py  callbacks.py  cli.py  error_analysis.py  evaluate.py  gradcam.py  models.py  paths.py  preprocessing.py  train.py  tuning.py
(+263 files in other folders)
