[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-image-ml"
version = "0.1.0"
description = "Medical image classification comparing RF, MLP, and CNN models."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "tensorflow>=2.15",
    "keras-tuner>=1.4",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[project.scripts]
medimg-train = "medical_image_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
